@@ -12,6 +12,7 @@ o new method "addContent" for NehanPagedElement to push addional text to paged-e
 o add "nehan-clone" class to the blocks generated by cloned style.
 o add "data-root-block-id" attribute to output dom for the blocks of direct children of body.
 o add Config.disableInlineStyle to disable inline style or not.
+o Nehan.createEngine is added, now Nehan.setup is alias name of this function(remained for backward compatibility).
 * treat "true" or "false" value in dataset as 'boolean'.
 * disable margin-after, margin-before of inline element.
 ! rename LayoutContext(layout-context.js) to CursorContext(cursor-context.js).
